# PBD-X

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  STRUCTURE.md  vcpkg.json
src/: main.cpp  main_2d.cpp  main_3d.cpp
src/2d/core/: PointMass.cpp  PointMass.h  Spring.cpp  Spring.h  Vector2D.h
src/2d/gui/: OpenGLApplication2D.cpp  OpenGLApplication2D.h  OpenGLRenderer2D.cpp  OpenGLRenderer2D.h  Shader.cpp  Shader.h
src/2d/objects/: ClothObject.cpp  ClothObject.h  RopeObject.cpp  RopeObject.h
src/2d/simulation/: Simulation.cpp  Simulation.h
src/2d/utils/: Constants.h
src/3d/core/: PointMass.cpp  PointMass.h  Spring.cpp  Spring.h  Vector3D.h
src/3d/gui/: GLFWContext.cpp  OpenGLApplication3D.cpp  OpenGLApplication3D.h  OpenGLRenderer3D.cpp  OpenGLRenderer3D.h
src/3d/objects/: ClothObject.cpp  ClothObject.h  RopeObject.cpp  RopeObject.h
src/3d/simulation/: Simulation.cpp  Simulation.h
src/3d/utils/: Constants.h
src/core/: PointMass.h  Spring.h  Vector2D.h
src/gui/: GLFWContext.cpp  GLFWContext.h  OpenGLApplication.cpp  OpenGLApplication.h  OpenGLRenderer.cpp  OpenGLRenderer.h
src/math/: Vector2.h  Vector3.h
src/objects/: ClothObject.h  RopeObject.h
src/simulation/: Simulation.h
